remove embedded entities and implement aggregates using entity relations